k8s/fortress-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortress-dashboard-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fortress
  template:
    metadata:
      labels:
        app: fortress
    spec:
      serviceAccountName: fortress-dashboard-sa
      containers:
        - name: fortress-dashboard
          image: fortressvnetdevb0d6a535acru9s3l6.azurecr.io/fortress-dashboard:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: fortress-service
spec:
  selector:
    app: fortress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
